added html of services sections of home page. Done most of css of the services sections. Still need to change button colors and services logo.

--- a/src/assets/css/critical.css
+++ b/src/assets/css/critical.css
@@ -3,21 +3,89 @@
 <---           Hero             -->
 <--- -------------------------- -*/
 /* Mobile - 360px */
-@media only screen and (min-width: 0em) {
-  #hero {
-    font-family: "Roboto", "Arial", sans-serif;
-    /* Centers button */
-    text-align: center;
-    /* changes on tablet */
-    padding: 0 1rem;
-    padding-bottom: 6.25rem;
+@media only screen and (min-width: 0rem) {
+  #hero-1159 {
+    /* 200px - 300px - leaving extra space for the navigation */
+    padding: clamp(7.25rem, 16.82vw, 10.25rem) 1rem clamp(3.75rem, 7.82vw, 6.25rem);
+    /* prevents padding and border from affecting height and width */
+    box-sizing: border-box;
+    overflow: hidden;
     position: relative;
     z-index: 1;
-    /* prevents overflow from the lines extending past the screen width */
-    overflow: hidden;
   }
-  #hero .cs-picture {
-    /* Background Image */
+  #hero-1159 .cs-container {
+    width: 100%;
+    max-width: 80rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6vw, 4rem);
+  }
+  #hero-1159 .cs-content {
+    /* set text align to left if content needs to be left aligned */
+    text-align: center;
+    width: 100%;
+    max-width: 39.375rem;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: center;
+  }
+  #hero-1159 .cs-topper {
+    font-size: var(--topperFontSize);
+    line-height: 1.2em;
+    text-transform: uppercase;
+    text-align: inherit;
+    letter-spacing: 0.1em;
+    font-weight: 700;
+    color: var(--secondary);
+    margin-bottom: 0.25rem;
+    display: block;
+  }
+  #hero-1159 .cs-title {
+    /* 39px - 61px */
+    font-size: clamp(2.2rem, 4vw, 3.2rem);
+    font-weight: 700;
+    line-height: 1.2em;
+    text-align: inherit;
+    max-width: 51.8125rem;
+    margin: 0 auto 1rem 0;
+    color: #fff;
+    position: relative;
+  }
+  #hero-1159 .cs-text {
+    /* 16px - 20px */
+    font-size: clamp(1rem, 1.95vw, 1.25rem);
+    line-height: 1.5em;
+    text-align: inherit;
+    width: 100%;
+    /* 464px - 622px */
+    max-width: clamp(29rem, 60vw, 38.785rem);
+    color: #fff;
+  }
+  #hero-1159 .cs-picture {
+    width: 70%;
+    max-width: 36.5625rem;
+    /* 380px - 453px */
+    height: auto;
+    display: flex;
+    margin: 2rem 0 0 0;
+    z-index: 1;
+  }
+  #hero-1159 .cs-picture img {
+    height: auto;
+    width: 100%;
+  }
+  #hero-1159 .cs-graphic {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+  }
+  #hero-1159 .cs-background {
     width: 100%;
     height: 100%;
     display: block;
@@ -25,274 +93,310 @@
     top: 0;
     left: 0;
     z-index: -2;
+    background: rgb(32, 105, 220);
+    background: linear-gradient(129deg, rgb(32, 105, 220) 0%, rgb(161, 0, 217) 100%);
   }
-  #hero .cs-picture:before {
-    /* Black Color Overlay */
-    content: "";
+  #hero-1159 #csa-button-box-hero-1 {
     width: 100%;
-    height: 100%;
-    background: #000;
-    opacity: 0.7;
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    /* prevents the cursor from interacting with it */
-    pointer-events: none;
-  }
-  #hero .cs-picture img {
-    width: 100%;
-    height: 100%;
-    /* Makes image act like a background-image */
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  #hero .cs-container {
-    width: 100%;
-    max-width: 80em;
-    margin: auto;
-    /* we put the padding top and bottom on the container instead of #Hero so the pseudo element lines go to the top and bottom of the section */
-    /* 144px - 280px - leaving extra space for the navigation */
-    /* changes on tablet */
-    padding: clamp(9em, 25.95vw, 17.5em) 0;
-    position: relative;
-  }
-  #hero .cs-container:before {
-    /* Left Line */
-    content: "";
-    width: 1px;
-    height: 100%;
-    background: -moz-linear-gradient(top, rgba(250, 251, 252, 0.5) 0%, rgba(250, 251, 252, 0) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(250, 251, 252, 0.5) 0%, rgba(250, 251, 252, 0) 100%); /* Chrome10-25,Safari5.1-6 */
-    opacity: 1;
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  #hero .cs-flex-group {
-    width: 80vw;
-    /* 464px - 562px */
-    max-width: clamp(29em, 60vw, 35.125em);
-    margin: auto;
-    /* 60px - 220px */
-    margin-bottom: clamp(3.75em, 15.5vw, 13.75em);
-    box-sizing: border-box;
+    max-width: 34.375rem;
+    margin-bottom: 2rem;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
     flex-wrap: wrap;
+    gap: 1.5rem;
+    transition: background-color 1s;
+    transition: color 0.3s;
+    justify-content: center;
   }
-  #hero .cs-topper {
-    text-align: center;
-    margin-bottom: 1rem;
-    color: var(--primary);
+  #hero-1159 #csa-button-box-hero-1 .cs-button-solid {
+    max-width: 40vh;
+    flex: 1 1 auto;
+    line-height: none;
   }
-  #hero .cs-title {
-    text-align: center;
-    width: 100%;
-    color: var(--bodyTextColorWhite);
-  }
-  #hero .cs-text {
-    text-align: center;
-    /* 32px - 40px */
-    margin: 0 auto clamp(2rem, 4vw, 2.5rem) 0;
-    /* 40px - 48px */
-    margin-bottom: clamp(2.5rem, 4vw, 3rem);
-    color: var(--bodyTextColorWhite);
-  }
-  #hero .cs-button-solid {
-    line-height: clamp(2.875em, 5.5vw, 3.5em);
-    height: initial;
-    margin-bottom: 1rem;
-  }
-  #hero .cs-button-transparent {
-    font-size: 1rem;
-    font-weight: 700;
-    /* 46px - 56px */
-    line-height: clamp(2.875em, 5.5vw, 3.5em);
-    text-decoration: none;
-    width: 11.25rem;
-    /* 46px - 56px */
-    height: clamp(2.875em, 5.5vw, 3.5em);
-    margin: 0 0.5rem;
-    box-sizing: border-box;
-    padding: 0;
-    color: #fff;
+  #hero-1159 #csa-button-box-hero-1 .cs-button-transparent {
+    max-width: 40vh;
+    flex: 1 1 auto;
+    line-height: none;
     background-color: transparent;
     border: 1px solid var(--bodyTextColorWhite);
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    z-index: 1;
+    color: var(--bodyTextColorWhite);
+    box-sizing: border-box;
   }
-  #hero .cs-button-transparent:before {
-    content: "";
-    background: #000;
-    opacity: 1;
-    display: block;
-    position: absolute;
-    /* so it sits on top of the border */
-    top: -1px;
-    right: -1px;
-    bottom: -1px;
-    left: -1px;
-    z-index: -1;
-    /* this is what creates the grow affect on hover */
-    transform: scaleX(0);
-    transition: transform 0.3s;
-    transform-origin: left;
-  }
-  #hero .cs-button-transparent:hover:before {
-    transform: scaleX(1);
-  }
-  #hero .cs-button-transparent .cs-img {
-    margin-right: 0.75rem;
-    display: block;
+  #hero-1159 #csa-button-box-hero-1 .cs-button-transparent:hover {
+    background-color: var(--bodyTextColorWhite);
+    color: var(--bodyTextColor);
   }
 }
 /* Tablet - 768px */
-@media only screen and (min-width: 48em) {
-  #hero {
-    /* 32px - 40px */
-    padding: 0 clamp(2em, 5vw, 2.5em);
+@media only screen and (min-width: 48rem) {
+  #hero-1159 {
+    /* 150px - 300px */
+    padding-bottom: clamp(9.375rem, 22vw, 18.75rem);
   }
-  #hero .cs-container {
-    padding: clamp(7em, 27.95vw, 17.5em) 0 clamp(9em, 30.95vw, 23.5em) 0;
+  #hero-1159 .cs-container {
+    flex-direction: row;
+    justify-content: flex-start;
   }
-  #hero .cs-container:after {
-    /* Right Line */
-    content: "";
-    width: 1px;
-    height: 100%;
-    background: -moz-linear-gradient(top, rgba(250, 251, 252, 0) 0%, rgba(250, 251, 252, 0.5) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(250, 251, 252, 0) 0%, rgba(250, 251, 252, 0.5) 100%); /* Chrome10-25,Safari5.1-6 */
-    opacity: 1;
-    display: block;
+  #hero-1159 .cs-content {
+    text-align: left;
+    width: 55%;
+    max-width: 39.375rem;
+    align-items: flex-start;
+  }
+  #hero-1159 .cs-picture {
+    justify-content: flex-start;
     position: absolute;
-    top: 0;
-    right: 0;
+    bottom: 0;
+    left: 50%;
   }
-  #hero .cs-button-solid {
-    margin-right: 1.25rem;
-    margin-bottom: 0;
+  #hero-1159 #csa-button-box-hero-1 {
+    justify-content: flex-start;
   }
 }
-/* Desktop Parallax Effect - 1300px */
-@media only screen and (min-width: 81.25em) {
-  #hero {
-    background: url("/assets/images/landing.jpg");
-    background-position: center;
+/* Large Desktop - 1600px - Prallax Effect */
+@media only screen and (min-width: 100rem) {
+  #hero-1159 .cs-background {
+    background: url("https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/garage.jpg");
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
-    /* creates parallax effect on background image */
     background-attachment: fixed;
   }
-}
-/* Dark Mode */
-@media only screen and (min-width: 0em) {
-  body.dark-mode #hero .cs-background:before {
-    opacity: 0.8;
+  #hero-1159 .cs-background img {
+    display: none;
   }
 }
 /*-- -------------------------- -->
 <---          Services          -->
 <--- -------------------------- -*/
-/* Mobile */
-@media only screen and (min-width: 0em) {
-  .services {
-    width: 90%;
-    max-width: 82.5em;
-    margin: auto;
-    margin-top: -10.4375em;
-    margin-bottom: 3.125em;
-    padding: 3.125em 1.25em;
-    background: #fff;
-    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.05);
-    border-top: 0.375em solid var(--primary);
-    border-radius: 0.3125em;
-    position: relative;
-    z-index: 100;
+@media only screen and (min-width: 0rem) {
+  #services-448 {
+    padding: var(--sectionPadding);
   }
-  .services .card {
+  #services-448 .cs-container {
     width: 100%;
-    max-width: 22.3125em;
+    /* changes at 1280px at tablet */
     margin: auto;
-    margin-bottom: 3.125em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6vw, 4rem);
+  }
+  #services-448 .cs-content {
+    /* set text align to left if content needs to be left aligned */
+    text-align: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: center;
+  }
+  #services-448 .cs-card-group {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    /* 16px - 20px */
+    column-gap: clamp(1rem, 1.5vw, 1.25rem);
+    /* 24px - 60px */
+    row-gap: clamp(1.5rem, 5vw, 3.75rem);
+  }
+  #services-448 .cs-item {
+    list-style: none;
+    width: 100%;
+    max-width: 22.5rem;
+    /* changes at desktop */
+    padding-top: 9rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  #services-448 .cs-item:hover .cs-picture img {
+    transform: scale(1.2);
+    opacity: 0.4;
+  }
+  #services-448 .cs-item:hover .cs-flex:before {
+    opacity: 1;
+  }
+  #services-448 .cs-picture {
+    width: 100%;
+    /* changes at desktop */
+    height: 15.625rem;
+    border-radius: 0.5rem;
+    background-color: var(--primary);
+    /* clips the corners of the image */
+    overflow: hidden;
     display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background-color: #818181;
   }
-  .services .card:last-of-type {
-    margin-bottom: 0;
+  #services-448 .cs-picture img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    /* makes it behave like a background image */
+    object-fit: cover;
+    /* positions top of image to the top of the container */
+    object-position: top;
+    transition: transform 0.9s, opacity 0.5s;
   }
-  .services .card picture {
-    width: 5.5em;
-    height: 5.5em;
-    margin: auto;
-    margin-bottom: 1.4375em;
-    background: var(--primary);
+  #services-448 .csa-pic-1 img {
+    opacity: 0.6;
+  }
+  #services-448 .csa-pic-2 img {
+    opacity: 0.7;
+  }
+  #services-448 .csa-pic-3 img {
+    opacity: 0.8;
+  }
+  #services-448 .cs-flex {
+    text-align: center;
+    width: 88%;
+    padding: 0 1.5rem 1.5rem 1.5rem;
+    /* prevents padding and border from affecting height and width */
+    box-sizing: border-box;
+    border: 1px solid #dad9e3;
+    border-radius: 0.75rem;
+    background-color: #fff;
+    box-shadow: 0px 24px 54px rgba(87, 107, 147, 0.12);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+  #services-448 .cs-flex:before {
+    /* hover border box */
+    content: "";
+    background: transparent;
+    /* prevents the mouse from interacting with it */
+    pointer-events: none;
+    border-radius: 0.75rem;
+    /* prevents border from affecting height and width */
+    box-sizing: border-box;
+    opacity: 0;
+    position: absolute;
+    display: block;
+    top: -1px;
+    left: -1px;
+    right: -1px;
+    bottom: -1px;
+    transition: opacity 0.5s;
+    border: 4px solid var(--oGradientBlue);
+  }
+  #services-448 .cs-wrapper {
+    /* 80px - 120px */
+    width: clamp(5rem, 9.2vw, 7.5rem);
+    height: clamp(5rem, 9.2vw, 7.5rem);
+    /* 20px - 24px */
+    margin: 0 0 clamp(1.25rem, 1.5vw, 1.5rem);
+    /* we use the same clamp value for height & width, but multiple by -.5 so it will be a negative value, and be half of the height.  Negative margins pull things toward the element so they overlap them, in this case we want the .cs-wrapper to overlap .cs-flex by half its height, so we use the same clamp for height and half it for the margin top value */
+    margin-top: calc(clamp(5rem, 9.2vw, 7.5rem) * -0.5);
     border-radius: 50%;
+    background-color: #fff;
+    /* prevents border from affecting height and width */
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    z-index: 10;
+    border: 4px solid transparent;
+    background-image: linear-gradient(white, white), linear-gradient(135deg, var(--oGradientBlue), var(--oGradientPurple));
+    background-origin: border-box;
+    background-clip: content-box, border-box;
   }
-  .services .card picture img {
-    width: 3em;
-    height: 3em;
+  #services-448 .cs-icon {
+    width: clamp(2rem, 2vw, 4rem);
+    height: auto;
+    display: block;
   }
-  .services .card h2 {
-    font-size: 2em;
+  #services-448 .cs-icon .cs-reduce {
+    width: clamp(1.5rem, 1.2vw, 2rem);
+  }
+  #services-448 .cs-h3 {
+    /* 20px - 25px */
+    font-size: clamp(1.25rem, 1.9vw, 1.5625rem);
+    line-height: 1.2em;
     font-weight: 700;
-    line-height: 1.35em;
-    text-align: center;
-    margin-bottom: 0.65em;
-    color: #1a1a1a;
+    margin: 0 0 0.5rem 0;
+    color: var(--headerColor);
   }
-  .services .card p {
-    line-height: 1.3333333333em;
-    text-align: center;
-    width: 100%;
-    opacity: 0.7;
+  #services-448 .cs-item-text {
+    /* 14px - 16px */
+    font-size: clamp(0.875rem, 1.5vw, 1rem);
+    line-height: 1.5em;
+    font-weight: 400;
+    /* 20px - 24px */
+    margin: 0 0 clamp(1.25rem, 1.5vw, 1.5rem);
+    color: var(--bodyTextColor);
   }
-}
-/* Inbetween */
-@media only screen and (min-width: 768px) {
-  .services {
-    font-size: min(1.8vw, 1em);
-    width: 98%;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-  }
-  .services .card {
-    max-width: 20.3125em;
+  #services-448 .cs-link {
+    /* 16px - 20px */
+    font-size: clamp(1rem, 1.5vw, 1.25rem);
+    line-height: 1.5em;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-decoration: none;
     margin: 0;
+    color: var(--primary);
+    display: inline-block;
+    position: relative;
+  }
+  #services-448 .cs-link:hover:before {
+    width: 100%;
+  }
+  #services-448 .cs-link:before {
+    /* animated underline */
+    content: "";
+    width: 0%;
+    height: 3px;
+    background: currentColor;
+    opacity: 1;
+    position: absolute;
+    display: block;
+    bottom: -0.125rem;
+    left: 0;
+    transition: width 0.3s;
   }
 }
-/* Large Desktop */
-@media only screen and (min-width: 1300px) {
-  .services {
-    padding: 3.125em 5em;
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+  #services-448 .cs-container {
+    max-width: 80rem;
   }
-  .services .card {
-    max-width: 22.3125em;
+  #services-448 .cs-card-group {
+    flex-direction: row;
   }
-}
-/* Dark mode */
-@media only screen and (min-width: 0em) {
-  body.dark-mode #services {
-    background: var(--medium);
-  }
-  body.dark-mode #services picture {
-    background: var(--primaryDark);
-  }
-  body.dark-mode #services h2 {
-    font-weight: bold;
-    color: #fff;
+  #services-448 .cs-item {
+    width: 47%;
   }
 }
+/* Small Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+  #services-448 .cs-card-group {
+    flex-wrap: nowrap;
+  }
+  #services-448 .cs-item {
+    width: 100%;
+    /* 144px - 274px */
+    padding-top: clamp(9rem, 17.5vw, 17.125rem);
+  }
+  #services-448 .cs-picture {
+    /* 224px - 428px */
+    height: clamp(14rem, 28vw, 26.75rem);
+  }
+}
+/* Dark Mode */
 
 /*# sourceMappingURL=critical.css.map */
