--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -16,6 +16,7 @@
     --oBlueNavy: #1D355B;
     --oGradientBlue: #2069DC;
     --oGradientPurple: #A100D9;
+    --oBluePurpleGradient: linear-gradient(135deg, var(--oGradientBlue), var(--oGradientPurple));
     /* 13px - 16px */
     --topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
     /* 31px - 49px */
@@ -66,7 +67,7 @@
     text-align: center;
     margin: 0;
     color: var(--bodyTextColorWhite);
-    background-color: var(--oBlueNavy);
+    background-color: var(--oGradientBlue);
     min-width: 9.375rem;
     padding: 0 2rem;
     box-sizing: border-box;
@@ -78,6 +79,31 @@
     border-radius: 1.1rem;
   }
   .cs-button-solid:hover {
+    background-color: #f7f7f7;
+    color: var(--primary);
+  }
+  .cs-button-solid-hero {
+    font-size: 1rem;
+    /* 46px - 56px */
+    line-height: clamp(2.875rem, 8vw, 3.5rem);
+    text-decoration: none;
+    font-weight: 700;
+    letter-spacing: 0.044rem;
+    text-align: center;
+    margin: 0;
+    color: var(--bodyTextColorWhite);
+    background-color: var(--oBlueNavy);
+    min-width: 9.375rem;
+    padding: 0 2rem;
+    box-sizing: border-box;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    transition: background-color 1s;
+    transition: color 0.3s;
+    border-radius: 1.1rem;
+  }
+  .cs-button-solid-hero:hover {
     background-color: var(--bodyTextColorWhite);
     color: var(--primary);
   }
@@ -783,217 +809,163 @@
   }
 }
 /*-- -------------------------- -->
-<---           Footer           -->
+<---          Footer            -->
 <--- -------------------------- -*/
-/* Mobile */
-@media only screen and (min-width: 0em) {
-  #footer {
-    font-size: min(4vw, 1.2em);
-    padding: 5.25rem 0 1.25rem;
-    background: #1c1c1c;
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+  #cs-footer-273 {
+    padding: var(--sectionPadding);
+    background-color: #1a1a1a;
+    /* Navigation Links */
   }
-  #footer .left-section {
-    text-align: center;
-    margin: auto;
-    margin-bottom: 3.125rem;
-  }
-  #footer .left-section .logo {
-    text-align: center;
-    width: auto;
-    height: 2em;
-    margin: auto;
-    margin-bottom: 1.875em;
-    display: inline-block;
-  }
-  #footer .left-section .logo img {
-    width: auto;
-    height: 100%;
-    display: block;
-  }
-  #footer .left-section p {
-    font-size: 0.875rem;
-    line-height: 1.9285714286rem;
-    text-align: center;
+  #cs-footer-273 .cs-container {
     width: 100%;
-    width: 21.9285714286rem;
+    /* reset on tablet */
+    max-width: 34.375rem;
     margin: auto;
-    color: #fff;
-    opacity: 0.9;
-  }
-  #footer .right-section {
-    width: 96%;
-    max-width: 25.4375rem;
-    margin: auto;
-  }
-  #footer .right-section .lists {
-    width: 96%;
-    max-width: 19.1875rem;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-  #footer .right-section .lists ul {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 0;
-  }
-  #footer .right-section .lists ul:nth-of-type(3) {
-    margin-top: 3.125rem;
-  }
-  #footer .right-section .lists ul:nth-of-type(3) li {
-    margin-bottom: 1rem;
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    column-gap: 5.5rem;
+    row-gap: 2rem;
   }
-  #footer .right-section .lists ul:nth-of-type(3) li:last-of-type {
-    margin-bottom: 0;
-  }
-  #footer .right-section .lists ul li {
-    font-size: 1.125rem;
-    list-style: none;
-    margin-bottom: 0.75rem;
-    color: #fff;
-    opacity: 0.9;
-  }
-  #footer .right-section .lists ul li a {
-    line-height: 1.1666666667em;
-    text-decoration: none;
-    color: #fff;
-    transition: color 0.3s;
-  }
-  #footer .right-section .lists ul li a:hover {
-    color: var(--primary);
-  }
-  #footer .right-section .lists ul h2 {
-    font-size: 1.125rem;
-    font-weight: bold;
-    line-height: 1.1666666667em;
-    text-transform: uppercase;
-    margin-bottom: 2.3125rem;
-    color: #fff;
+  #cs-footer-273 .cs-logo-group {
+    /* takes up all the space, lets the other ul's wrap below it */
+    width: 100%;
     position: relative;
   }
-  #footer .right-section .lists ul h2:before {
-    content: "";
-    width: 6.0625rem;
-    height: 0.125rem;
-    background: var(--primary);
-    opacity: 1;
-    display: block;
-    position: absolute;
-    bottom: -1rem;
-    left: 0;
+  #cs-footer-273 .cs-logo-group {
+    /* 44px - 52px */
+    margin-bottom: clamp(2.75rem, 6.8vw, 3.25rem);
   }
-  #footer .right-section .buttons {
+  #cs-footer-273 .cs-logo {
+    /* 210px - 240px */
+    width: clamp(13.125rem, 8vw, 15rem);
+    height: auto;
+    display: block;
+  }
+  #cs-footer-273 .cs-logo-img {
+    width: 100%;
+    height: auto;
+  }
+  #cs-footer-273 .cs-logo-img.dark {
+    display: none;
+  }
+  #cs-footer-273 .cs-social {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 0.75rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  #cs-footer-273 .cs-social-link {
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: #4e4b66;
+    border-radius: 50%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+    transition: transform 0.3s, background-color 0.3s;
   }
-  #footer .right-section .cs-button-solid {
-    width: 15.625rem;
-    height: 3.3125rem;
-    margin: 0;
-    padding-top: 0.1875rem;
+  #cs-footer-273 .cs-social-link:hover {
+    background-color: var(--primary);
+    transform: translateY(-0.1875rem);
   }
-  #footer .credit {
-    font-size: 1rem;
-    line-height: 2.25rem;
-    text-align: center;
-    width: 96%;
-    margin: auto;
-    margin-top: 6.25rem;
-    color: #fff;
-  }
-  #footer .credit a {
-    font-size: 1rem;
-    text-decoration: none;
-    color: var(--primary);
-  }
-  #footer .credit a:hover {
-    text-decoration: underline;
-  }
-  #footer .credit .copyright {
-    font-size: 1rem;
+  #cs-footer-273 .cs-social-img {
+    height: 0.8125rem;
+    width: auto;
     display: block;
   }
-}
-/* Small Desktop */
-@media only screen and (min-width: 64em) {
-  #footer {
-    font-size: min(1.2vw, 1em);
-  }
-  #footer .container {
-    width: 96%;
-    max-width: 82.5rem;
-    margin: auto;
+  #cs-footer-273 .cs-nav {
     padding: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-  }
-  #footer .left-section {
-    text-align: left;
-    width: 25.5625rem;
     margin: 0;
   }
-  #footer .left-section .logo {
-    text-align: left;
-    height: 2.5rem;
-    margin-left: 0;
-  }
-  #footer .left-section p {
-    text-align: left;
-    margin-left: 0;
-  }
-  #footer .right-section {
-    width: 38.0625rem;
-    max-width: none;
+  #cs-footer-273 .cs-nav-li {
+    list-style: none;
     margin: 0;
+    color: var(--bodyTextColorWhite);
   }
-  #footer .right-section .lists {
-    width: 96%;
-    max-width: 48.0625rem;
-    max-width: initial;
-    margin: 0;
+  #cs-footer-273 .cs-header {
+    font-size: 1rem;
+    line-height: 1.5em;
+    font-weight: 700;
+    /* 16px - 20px */
+    margin-bottom: clamp(1rem, 2.7vw, 1.25rem);
+    color: var(--bodyTextColorWhite);
+    position: relative;
+    display: block;
   }
-  #footer .right-section .lists ul:nth-of-type(3) {
-    margin-top: 0;
-  }
-  #footer .right-section .lists ul:nth-of-type(3) li:first-of-type {
-    margin-bottom: 0;
-  }
-  #footer .right-section .lists ul li a {
+  #cs-footer-273 .cs-nav-link {
+    font-size: 1rem;
+    text-decoration: none;
+    line-height: 1.5em;
+    color: var(--bodyTextColorWhite);
     position: relative;
   }
-  #footer .right-section .lists ul li a:before {
+  #cs-footer-273 .cs-nav-link:before {
+    /* underline */
     content: "";
     width: 0%;
     height: 0.125rem;
-    background: var(--primary);
+    background: var(--bodyTextColorWhite);
     opacity: 1;
-    display: block;
     position: absolute;
-    bottom: -0.1875rem;
+    display: block;
+    bottom: -0.125rem;
     left: 0;
     transition: width 0.3s;
   }
-  #footer .right-section .lists ul li a:hover:before {
+  #cs-footer-273 .cs-nav-link:hover:before {
     width: 100%;
   }
-  #footer .right-section .buttons {
-    justify-content: flex-start;
+}
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+  #cs-footer-273 .cs-container {
+    max-width: 80rem;
+    row-gap: 0;
+    /* 44px - 88px */
+    column-gap: clamp(2.75rem, 5% + 1vw, 5.5rem);
   }
-  #footer .credit .copyright {
-    display: inline-block;
+  #cs-footer-273 .cs-logo-group {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  #cs-footer-273 .cs-social {
+    flex-direction: row;
+    position: relative;
+    top: auto;
+    right: auto;
   }
 }
-/* Dark Mode */
-@media only screen and (min-width: 0em) {
-  body.dark-mode #footer {
-    background: #061623;
+/* Small Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+  #cs-footer-273 .cs-container {
+    justify-content: flex-end;
+  }
+  #cs-footer-273 .cs-logo-group {
+    width: auto;
+    margin: 0;
+    /* pushes the rest of the content to the right in a flexbox */
+    margin-right: auto;
+    flex-direction: column;
+  }
+  #cs-footer-273 .cs-logo-img {
+    margin-bottom: 2.75rem;
+  }
+  #cs-footer-273 .cs-nav {
+    margin-top: 0.75rem;
   }
 }
+/*-- -------------------------- -->
+<---           Footer           -->
+<--- -------------------------- -*/
 
 /*# sourceMappingURL=root.css.map */
